--- a/digiart/package.json
+++ b/digiart/package.json
@@ -43,11 +43,8 @@
     ]
   },
   "devDependencies": {
-<<<<<<< HEAD
-    "eslint-plugin-jest": "^27.2.2"
-=======
+    "eslint-plugin-jest": "^27.2.2",
     "react-router-dom": "^6.14.0",
     "tailwindcss": "^3.3.2"
->>>>>>> e05cafa27daaf6b5c7e1e35c6d29e7a48ba388cb
   }
 }
